--- a/src/components/App.css
+++ b/src/components/App.css
@@ -20,3 +20,11 @@
 .App-link {
   color: #09d3ac;
 }
+
+
+.search {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
